2012-11-28  Filip Pizlo  <fpizlo@apple.com>

        It should be possible to say dataLog("count = ", count, "\n") instead of dataLogF("count = %d\n", count)
        https://bugs.webkit.org/show_bug.cgi?id=103009

        Reviewed by Michael Saboff.

        Added the ability to use out.print(...) and dataLog(...) variadically and with
        WTF::printInternal(PrintStream&, const T&) overloads for any type T that you want
        to be able to pass as an argument to out.print() or dataLog(). Also added one
        example class for doing this: RawPointer, which can be used to force a pointer
        to be printed as "%p" rather than matching any overloads that you might want to
        introduce.

        * GNUmakefile.list.am:
        * WTF.gypi:
        * WTF.pro:
        * WTF.vcproj/WTF.vcproj:
        * WTF.xcodeproj/project.pbxproj:
        * wtf/CMakeLists.txt:
        * wtf/DataLog.h:
        (WTF):
        (WTF::dataLog):
        * wtf/PrintStream.cpp:
        (WTF::printInternal):
        (WTF):
        * wtf/PrintStream.h:
        (PrintStream):
        (WTF::PrintStream::print):
        (WTF):
        * wtf/RawPointer.h: Added.
        (WTF):
        (RawPointer):
        (WTF::RawPointer::RawPointer):
        (WTF::RawPointer::value):

2012-11-27  Filip Pizlo  <fpizlo@apple.com>

        Convert some remaining uses of FILE* to PrintStream&.

        Rubber stamped by Mark Hahnenberg.

        * wtf/BitVector.cpp:
        (WTF::BitVector::dump):
        * wtf/BitVector.h:
        (BitVector):

2012-11-27  Pratik Solanki  <psolanki@apple.com>

        objc/objc-runtime.h does not exist on all PLATFORM(MAC)
        https://bugs.webkit.org/show_bug.cgi?id=101780

        Reviewed by Brent Fulgham.

        Clean up header includes so we don't include objc/objc-runtime.h.

        * wtf/Functional.h:
        * wtf/ObjcRuntimeExtras.h: Include objc/message.h here so we don't rely on proper ordering
        of includes in files that include this header.
