@@ -1,3 +1,13 @@
+2012-11-28  Roger Fong  <roger_fong@apple.com>
+
+        Make DataLog work/compile properly on Windows.
+        https://bugs.webkit.org/show_bug.cgi?id=103544
+
+        Reviewed by Filip Pizlo.
+
+        * wtf/DataLog.cpp:
+        (WTF::initializeLogFileOnce):
+
 2012-11-28  Filip Pizlo  <fpizlo@apple.com>
 
         It should be possible to say dataLog("count = ", count, "\n") instead of dataLogF("count = %d\n", count)
